# docs-rag

./: .env.example  .gitignore  LICENSE  README.md  README_CLI.md  README_MCP.md  README_WEB.md  app.py  cache.py  chunking.py  config.py  ingest.py  litellm_proxy_config.example.yaml  llm.py  main.py  mcp_server.py  pyproject.toml  query.py  requirements.txt  server.json
docs/: sample.md
static/: app.js  style.css
templates/: index.html
tests/: conftest.py  test_api.py  test_cache.py  test_chunking.py  test_config.py  test_ingest.py  test_llm.py  test_query.py
